# sales_agent

./: .env.example  main.py  manage.py  mvp.sql  pyproject.toml  test.yml
apps/products/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/products/migrations/: 0001_initial.py  0002_alter_brand_is_active_alter_group_is_active_and_more.py  0003_alter_group_name.py  0004_rename_brand_product_brand.py
sales_agent/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: brand.py  orm.py  populate_db.py  test.py
