[project]
name = "sales-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "django-restframework>=0.0.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-openai>=0.3.28",
    "langchain-postgres>=0.0.15",
    "langgraph>=0.5.3",
    "mypy>=1.17.0",
    "openai>=1.96.1",
    "pgvector>=0.3.6",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.3",
    "tiktoken>=0.9.0",
]
